--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,12 +20,14 @@
 					
 						<div id="logo">
 
-							<div id="state-logo" class="logo">
+	 						<!--<div id="state-logo" class="logo">
 								<img src="{{ site.baseurl }}/img/CAASPP-logo.png" alt="California Assessment of Student Performance and Progress logo" height="72" width="149" />
-							</div>	
+							</div>-->
 							<div id="state-seal" class="logo">
-								<img src="{{ site.baseurl }}/img/ca-dept-ducation.jpg" alt="California Department of Education" height="72" width="72" />
-							</div>
+								<img src="{{ site.baseurl }}/img/OSPI-logo-sm.jpg" alt="Office of Superintendent of Public Instruction" height="100" width="100" />
+	
+                            </div>
+                            <div class="header-name"><p>Office of Superintendent of Public Instruction</p></div>
 						
 						</div><!-- /logo -->
 						
