--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -82,7 +82,7 @@
 #logo {
     display: block;
     float: left;
-	width: 183px !important;
+	width: 230px !important;
 	min-height: 90px;	
     line-height: 1;
     text-decoration: none;	
@@ -92,7 +92,7 @@
 #logo > div {
 	display: inline-block;
 	vertical-align: middle;
-	margin-top: 13px;
+	margin-top: 2px;
 	}
 	
 // 95 + 10 + 60 + 10
@@ -101,8 +101,13 @@
 	margin-right: 10px;
 	}
 #state-seal	{
-	width: 65px;
+	width: 85px;
 	}
+	
+.header-name {
+	margin-top: -5em !important;
+	margin-left: 6em;
+}
 	
 .navbar-btn {
 	float: right;
@@ -173,7 +178,7 @@
 .nav-wrap ul > li > a:hover,
 .nav-wrap ul > li.current > a {
 	color: black;
-	box-shadow: inset 0 4px 0 0 $color-anchor;
+	box-shadow: inset 0 4px 0 0 $color-nav-accent;
 	}
 	
 #nav-rwd {
@@ -377,13 +382,13 @@
 .home .right-wrap button {
 	color: #fff;
 	padding: 0.5rem 0;
-	background-color: #007393;
-	border: 1px solid #007393;
+	background-color: $color-button1;
+	border: 1px solid $color-button1;
 	border-radius: $border-radius;
 	}	
 .home .right-wrap button:hover {
-	background-color: #004355;
-	border-color: #004355;
+	background-color: $color-button1-hover;
+	border-color: $color-button1-hover;
 	}	
 	
 .blocks {
