--- a/_includes/select-grade-std.html
+++ b/_includes/select-grade-std.html
@@ -18,7 +18,7 @@
 			<option value="6">Grade 6</option>
 			<option value="7">Grade 7</option>
 			<option value="8">Grade 8</option>
-			<option value="11">Grade 11</option>
+			<option value="11">High School</option>
 		</select>
 	</div>
 
