--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,7 @@ $font-lineheight-table: 1.4;
 $font-lineheight-footer: 1.3;
 
 $font-size-h1: 250%;
-$font-size-h2: 240%;
+$font-size-h2: 220%;
 $font-size-h3: 205%;
 $font-size-h4: 160%;
 $font-size-h5: 145%;
@@ -59,7 +59,7 @@ $color-anchor-underline: #b2dbe7;
 $color-anchor-hover: #71791f;
 $color-anchor-hover-underline: #b7c333;
 
-$color-anchor-focus: #3a6983; 
+$color-anchor-focus: #3a6983;
 $color-anchor-focus-background: #fdffed;
 
 $color-topbar: #686868;
@@ -110,5 +110,12 @@ $byclaim-background-color: #ffffe8;
         "layout",
 		"rwd",
 		"ie"
-		
+
 ;
+
+.breadcrumb{
+  text-transform: uppercase;
+  font-family: "PT Sans",sans-serif;
+  font-size: 80%;
+  letter-spacing: 0px;
+}
