update PDFs and images
added Smarter Balanced-branded sample item for each grade/subject;
updated sample student score report page with WA sample

--- a/css/main.scss
+++ b/css/main.scss
@@ -119,3 +119,14 @@ $byclaim-background-color: #ffffe8;
   font-size: 80%;
   letter-spacing: 0px;
 }
+.sections {
+  margin-left:0 !important;
+}
+.side-by-side {
+  width: 35%;
+}
+@media (max-width:979px) {
+  .side-by-side {
+    width: 65%;
+  }
+}
