--- a/_includes/select-grade-std.html
+++ b/_includes/select-grade-std.html
@@ -18,6 +18,8 @@
 			<option value="6">Grade 6</option>
 			<option value="7">Grade 7</option>
 			<option value="8">Grade 8</option>
+			<option value="9">Grade 9</option>
+			<option value="10">Grade 10</option>
 			<option value="11">Grade 11</option>
 		</select>
 	</div>
@@ -43,7 +45,7 @@
 			{% assign current = page.url | downcase | split: '/' %}
 			{% if current[1] == baseurl %}
 				Go!
-			{% else %}	
+			{% else %}
 				Go!
 			{% endif %}
 		</button>
