--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 								<img src="{{ site.baseurl }}/img/CAASPP-logo.png" alt="California Assessment of Student Performance and Progress logo" height="72" width="149" />
 							</div>-->
 							<div id="state-seal" class="logo">
-								<img src="{{ site.baseurl }}/img/ID-sde-logo.jpg" alt="Idaho State Department of Education" height="100" width="100" />
+								<img src="{{ site.baseurl }}/img/ID-sde-logo.jpg" alt="Idaho State Department of Education" />
 
                             </div>
                             <div class="header-name"><p><span id="idaho-mark">IDAHO</span><br> <span id="idaho-sub">STATE DEPARTMENT OF EDUCATION</span></p></div>
