--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,36 +1,33 @@
 <div id="wrap-header">
 
 	<header role="banner">
-	
+
 		<div class="topbar">
-			<div class="topbar-inner container max width"> 
+			<div class="topbar-inner container max width">
 				<div role="navigation">
 					<a href="#main" class="skiplink">skip to contents</a>
 					<a href="#nav" class="skiplink">skip to navigation</a>
 					<a href="#footer" class="skiplink">skip to footer</a>
-				</div><!-- /[role="navigation"] -->				
+				</div><!-- /[role="navigation"] -->
 			</div><!-- /.topbar-inner -->
 		</div><!-- /.topbar -->
-		
+
 		<div class="navbar-wrap">
-		
+
 			<div class="navbar">
 				<div class="navbar-inner">
 					<div class="container max width">
-					
+
 						<div id="logo">
 
 							<div id="state-logo" class="logo">
-								<img src="{{ site.baseurl }}/img/CAASPP-logo.png" alt="California Assessment of Student Performance and Progress logo" height="72" width="149" />
-							</div>	
-							<div id="state-seal" class="logo">
-								<img src="{{ site.baseurl }}/img/ca-dept-ducation.jpg" alt="California Department of Education" height="72" width="72" />
+								<img src="{{ site.baseurl }}/img/ODE-logo.JPG" alt="Oregon Department of Education" height="72" width="149" />
 							</div>
-						
+
 						</div><!-- /logo -->
-						
+
 						<a href="#" id="navbar-btn" class="navbar-btn">&#9776;</a>
-												
+
 						<nav id="nav" class="nav-wrap" role="navigation" aria-label="site navigation">
 							{% assign current = page.url | downcase | split: '/' %}
 							<ul>
@@ -59,14 +56,14 @@
 					</div><!-- /.container -->
 				</div><!-- /.navbar-inner -->
 			</div><!-- /.navbar -->
-					
+
 		</div><!-- /.navbar -->
-		
+
 		<div class="breadcrumb-wrap">
 			<div class="container max width">
 			</div><!-- /.container -->
 		</div><!-- /.breadcrump-wrap -->
-		
-	</header>	
 
-</div><!-- /wrap-head -->	
+	</header>
+
+</div><!-- /wrap-head -->
