--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ $padding-default: 10px;
 $border-radius: 4px;
 
 $font-serifs: 'PT Serif', serif;
-$font-sans-serifs: 'PT Sans', sans-serif;
+$font-sans-serifs: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 $font-size-default: 16px;
 $font-size-formfields: 13px;
@@ -29,20 +29,20 @@ $font-lineheight-table: 1.4;
 $font-lineheight-footer: 1.3;
 
 $font-size-h1: 250%;
-$font-size-h2: 240%;
-$font-size-h3: 205%;
+$font-size-h2: 200%;
+$font-size-h3: 180%;
 $font-size-h4: 160%;
 $font-size-h5: 145%;
 $font-size-h6: 100%;
 
-$color-body: #6c6c6c;
+$color-body: #000000;
 $color-body-background: #f3f3f3;
 
-$color-bold: #63666a;
+$color-bold: #000000;
 
 $color-hr: #f2f2f2;
 
-$color-h1: #008ab1;
+$color-h1: #000000;
 $color-h1-underline: #d3dfe1;
 $color-h2: #000000;
 
@@ -53,17 +53,18 @@ $color-form-disabled-background: #eee;
 $color-heading: #63666a;
 $color-footer: #7a7a7a;
 
-$color-anchor: #007393;
-$color-anchor-underline: #b2dbe7;
 
-$color-anchor-hover: #358c21;
-$color-anchor-hover-underline: #a1d794;
+$color-anchor: inherit;
+//$color-anchor-underline: #b2dbe7;
 
-$color-anchor-focus: #008ab1; 
-$color-anchor-focus-background: #e5f3f7;
+$color-anchor-hover: #b50010;
+//$color-anchor-hover-underline: #000040;
+
+$color-anchor-focus: #000040;
+$color-anchor-focus-background: #e5e9f4;
 
 $color-topbar: #686868;
-$color-topbar-hover: #007393;
+$color-topbar-hover: #0000FF;
 
 
 $color-accordion-gray: #ccc;
@@ -99,5 +100,5 @@ $byclaim-background-color: #ffffe8;
         "layout",
 		"rwd",
 		"ie"
-		
+
 ;
